@@ -1,0 +1,20 @@
+/*
+ * Copyright 2018, Data61
+ * Commonwealth Scientific and Industrial Research Organisation (CSIRO)
+ * ABN 41 687 119 230.
+ *
+ * This software may be distributed and modified according to the terms of
+ * the GNU General Public License version 2. Note that NO WARRANTY is provided.
+ * See "LICENSE_GPLv2.txt" for details.
+ *
+ * @TAG(DATA61_GPL)
+ */
+
+#ifndef __PLAT_MACHINE_TIMER_H
+#define __PLAT_MACHINE_TIMER_H
+
+#define TIMER_CLOCK_HZ 31250000llu
+
+#include <arch/machine/generic_timer.h>
+
+#endif /* !__PLAT_MACHINE_TIMER_H */
