@@ -1,0 +1,28 @@
+/*
+ * Copyright 2018, Data61
+ * Commonwealth Scientific and Industrial Research Organisation (CSIRO)
+ * ABN 41 687 119 230.
+ *
+ * This software may be distributed and modified according to the terms of
+ * the GNU General Public License version 2. Note that NO WARRANTY is provided.
+ * See "LICENSE_GPLv2.txt" for details.
+ *
+ * @TAG(DATA61_GPL)
+ */
+
+#include <config.h>
+#include <types.h>
+#include <arch/machine.h>
+#include <arch/machine/generic_timer.h>
+#include <linker.h>
+
+BOOT_CODE void
+initTimer(void)
+{
+    initGenericTimer();
+}
+
+void plat_cleanL2Range(paddr_t start, paddr_t end) {}
+void plat_invalidateL2Range(paddr_t start, paddr_t end) {}
+void plat_cleanInvalidateL2Range(paddr_t start, paddr_t end) {}
+void plat_cleanInvalidateCache(void) {}
